2008-12-08  Pierre-Olivier Latour  <pol@apple.com>

        Reviewed by Dan Bernstein.

        Increase timeout in video-paint-test.js so that <video> tests pass on the Tiger pixel bot which is slower
        than the Leopard one.

        https://bugs.webkit.org/show_bug.cgi?id=22742

        * media/video-paint-test.js:
        (init):

2008-12-08  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.
        
        Added a test for interesting uses of non-pattern-characters in regular
        expressions.

        * fast/regex/non-pattern-characters-expected.txt: Added.
        * fast/regex/non-pattern-characters.html: Added.
        * fast/regex/resources/non-pattern-characters.js: Added.

2008-12-08  Darin Adler  <darin@apple.com>

        Reviewed by John Sullivan.

        - tests for https://bugs.webkit.org/show_bug.cgi?id=22409
          REGRESSION: cmd-shift-left/right don't switch tabs, instead select text

        * editing/execCommand/enabling-and-selection-2-expected.txt: Added.
        * editing/execCommand/enabling-and-selection-2.html: Added.
        * editing/execCommand/enabling-and-selection-expected.txt: Added.
        * editing/execCommand/enabling-and-selection.html: Added.
        * editing/execCommand/resources: Added.
        * editing/execCommand/resources/TEMPLATE.html: Copied from LayoutTests/fast/js/resources/TEMPLATE.html.
        * editing/execCommand/resources/enabling-and-selection-2.js: Added.
        * editing/execCommand/resources/enabling-and-selection.js: Added.

        * fast/canvas/canvas-setTransform.html: Let make-js-test-wrappers update this.
        * fast/canvas/canvas-strokeRect.html: Ditto.

        * platform/qt/Skipped: Added enabling-and-selection-2 to the skipped list.
        * platform/win/Skipped: Ditto.

2008-12-08  Pamela Greene  <pam@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=22739